Testing/compilefail/BlitzArraySliceIteratorError2.cc
// Copyright András Vukics 2006–2015. Distributed under the Boost Software License, Version 1.0. (See accompanying file LICENSE.txt)
#include "BlitzArraySliceIterator.tcc"

template class blitzplusplus::basi::Iterator<4,tmptools::Vector<3,2,4,1>,true>;